add type module to js

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -343,4 +343,9 @@ footer {
         max-width: 500px;
         margin: 0 auto;
     }
+
+    /* designa bildgalleriet */
+    .image-gallery {
+     
+    }
 }
