add styling to images

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -345,7 +345,8 @@ footer {
     }
 
     /* designa bildgalleriet */
-    .image-gallery {
-     
+    img {
+     display: block;
+     margin: 10px auto;
     }
 }
