--- a/src/css/main.css
+++ b/src/css/main.css
@@ -337,7 +337,7 @@ footer {
     }
 
     /* designa main-text*/
-    main p, main h1 {
+    main p, main h1, main h2 {
         text-align: center;
         padding: 10px;
         max-width: 500px;
